[project]
name = "blog-generation-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.7",
    "langgraph-cli[inmem]>=0.4.12",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]
